# Howdex

./: .gitignore  BENCHMARKS.md  BENCHMARKS_HOWDEX_VS_MEM0.md  BENCHMARKS_MULTI_FAMILY.md  CHANGELOG.md  CONTRIBUTING.md  DEV_INSTALL.md  ENTERPRISE_PILOT.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_HARDENING_REPORT.md  RENAME_NOTES.md  benchmark_openai.py  breakthrough_gauntlet.py  chaos_test.py  conftest.py  cross_model_verified_transfer_test.py  docker_compounding_curve_test.py  drift_test.py  god_mode_test.py  howdex_mcp_deploy_server.py  langchain_howdex_agent_demo.py  macgyver_test.py  mcp_howdex_agent_demo.py  noncoding_probe.py  openai_agents_howdex_demo.py  openai_agents_howdex_demo_v2.py  polyglot_macgyver_nosynth_test.py  polyglot_macgyver_test.py  procedure_trust_calibration_test.py  pyproject.toml  real_agent_demo.py  real_agent_demo_v2.py  real_docker_recovery_ab_test.py  real_llm_agent_howdex_demo.py  real_macgyver_ab_test.py  real_macgyver_test.py  (+16 more)
awesome-agent-memory/: README.md
benchmark_results/: docker_hard_ab_n20_20260623_172737.txt
benchmarks/: oss_repo_repair_benchmark.py  real_repo_repair_benchmark.py  real_test_suite_benchmark.py  report.py  swe_repeat_benchmark.py
codex/: README.md
docs/: ADAPTERS.md  ARCHITECTURE.md  ATTESTATIONS.md  AUDITABLE_ABSTRACTION.md  AWM_HEAD_TO_HEAD_RESULTS.md  BENCHMARKS.md  CI.md  CODEX_GOVERNANCE.md  DOGFOODING.md  HOWDEX_SWE_REPEAT_50.md  MCP.md  OBSERVABILITY.md  PILOT.md  PROTOCOL.md  RECEIPT_SPEC.md  REDTEAM.md  REGISTRY_PROTOCOL.md  REPO_STRUCTURE.md  STANDARD.md  TRUST_CALIBRATION.md  TRUST_CALIBRATION_RESULTS.md  TUTORIAL.md  TUTORIAL_CLAUDE_DESKTOP.md
dogfood-results/: metrics.csv
examples/: first_time_dev.py  langchain_agent.py  mcp_client.py  multi_agent_sync.py  quickstart.py  trading_agent.py  zero_trust_financial_agent.py
howdex/: __init__.py  __main__.py  abstraction.py  attestation.py  bootproof.py  codex_governance.py  compiler.py  diagnostics.py  federation.py  governance.py  health.py  html_renderers.py  instrument.py  ledger.py  portable.py  public_registry.py  redteam.py  registry.py  telemetry.py
launch/: AWESOME_LIST_SUBMISSION.md  PILOT_OUTREACH.md  SHOW_HN_DRAFT.md
registry/: manifest.json
scripts/: howdex_dogfood.py  release_gate.sh
tests/: test_actions.py  test_adapters_import.py  test_agent_guidance_formatting.py  test_architectural_hardening.py  test_auditable_llm_abstraction.py  test_awm_head_to_head.py  test_classification.py  test_cli.py  test_codex_ci_action.py  test_codex_entries.py  test_codex_governance_cli.py  test_engine.py  (+70 more)
(+134 files in other folders)
